# Ballistic-Pendulum-Simulator

./: README.md  build-appimage.sh  meson.build
src/: main.vala  oscillation_graph.vala  simulation_area.vala  window.vala
